[CW] added subsection two

--- a/course_work_number_one/main.tex
+++ b/course_work_number_one/main.tex
@@ -1,8 +1,28 @@
-\documentclass[a4paper,14pt]{extreport}
+\documentclass[a4paper,14pt]{report}
 
 \usepackage[utf8]{inputenc}
-%\usepackage[T2A]{fontenc}
-%\userpackage[russian]{babel}
+\usepackage[T2A]{fontenc}
+\usepackage[russian]{babel}
+
+\usepackage{dsfont} % it needs for Math-special words as A
+\usepackage{color} % I use it for color links
+\usepackage{hyperref}
+
+
+\hypersetup{
+    colorlinks=true, %set true if you want colored links
+    linktoc=all,     %set to all if you want both sections and subsections linked
+    linkcolor=blue,  %choose some color if you want links to stand out
+}
+
+
+\newcommand\tab[1][1cm]{\hspace*{#1}}
+\newcommand{\udsum}[3]{\sum\limits_{#1}^{#2}{#3}}
+\newcommand{\dsum}[2]{\sum\limits_{#1}{#2}}
+\newcommand{\tl}{\newline\tab}
+
+\renewcommand{\thesection}{\arabic{section}}
+\renewcommand{\thesubsection}{\arabic{section}}
 
 \author{Sharov Alex}
 
@@ -11,26 +31,73 @@
  
 \setcounter{tocdepth}{1}
 
-
-
-\tableofcontents{}
-
-
+\tableofcontents
 
 \section{Введение}
 
 \section{Квадратичная форма и ее свойства}
 
+\tab Квадратичной формой над множеством $\mathds{a}$ называют однородный полином второй степени с коэффициентами из $\mathds{a}$;
+\tl
+(Полином (многочлен) $F(x_1,x_2,...,x_l)$ называется однородным полиномом или формой степени (или порядка) $m$, если все его одночлены имеют степень $m$. Однородный полином первого, второго или третьего порядков называют также, соответственно, линейной, квадратичной или кубической формой.)
+\tl
+Если переменные квадратичной формы обозначить $x_1,...,x_n$, то общий вид квадратичной формы от этих переменных:
+\\
+$f(x_1,...x_n)=\dsum{1 \le j \le k \le n}{f_{jk}x_jx_k} = \udsum{j=1}{n}{}\udsum{k=1}{n}{a_{jk}x_{j}x{k}}$
+\\ \tab где $a_{jk} = f_{jk}$ некоторые числа, называемые коэффициентами.
+\\
+Не ограничивая общности, можно считать, что $a_{jk} = a_{kj}$. Квадратичная форма называется действительной или комплексной в зависимости от того, являются ли ее коэффициенты соответственно действительными или комплексными числами. Будем рассматривать действительные квадратичные формы.
+\tl 
+Квадратичная форма обладает следующими свойствами:
+\tl
+1) Для любой квадратичной формы $А$ существует единственная симметричная билинейная форма B, такая, что $A(x) = B(x, x)$. Билинейную форму B называют полярной к $A$. 
+\tl
+(Билинейной формой называется функция $F:L \times L \to K$, линейная по каждому из аргументов, где $L$ есть векторное пространство над полем $K$: \\
+\tab $F(x+z,y)=F(x,y)+F(z,y)$ \\
+\tab $F(x,y+z)=F(x,y)+F(x,z)$ \\
+\tab $F(\lambda x,y)= F(x,\lambda y) = \lambda F(x,y)$, здесь $x,y,\in L$ и $\lambda \in K$)
+\tl
+Матрица билинейной формы в произвольном базисе совпадает с матрицей полярной ей билинейной формы в том же базисе.
+\tl
+(Базис — множество таких векторов в векторном пространстве, что любой вектор этого пространства может быть единственным образом представлен в виде линейной комбинации векторов из этого множества — базисных векторов.)
+\tl
+2) Если матрица квадратичной формы имеет полный ранг, то квадратичную форму называют невырожденной, иначе - вырожденной.
+\tl
+(Рангом матрицы $A$ с $m$ строк и $n$ столбцов называется максимальное число линейно независимых строк (столбцов). Несколько строк (столбцов) называются линейно независимыми, если ни одна из них не выражается линейно через другие. Ранг $rangM$ матрицы $M$ размера $m \times n$ называют полным, если $rangM = min(m,n)$.)
+\tl
+3) Квадратичная форма A(x,x) называется положительно (отрицательно) определённой, если для любого $x \ne 0 A(x,x) > 0 (A(x,x) < 0)$. Положительно определённые и отрицательно определённые формы называются знако-определёнными. 
+\tl
+Квадратичная форма является положительно определенной, тогда и только тогда, когда все угловые миноры её матрицы строго положительны.
+\tl
+Квадратичная форма является отрицательно определенной, тогда и только тогда, когда знаки всех угловых миноров её матрицы чередуются, причем минор порядка 1 отрицателен.
+\tl
+(Минором k-го порядка матрицs M с  строк и  столбцов называется определитель k-го порядка, элементами которого являются элементы матрицы М, стоящих на пересечении k строк и k столбцов. 
+Минор, расположенный в первых k строках и k столбцах, называется угловым минором.)
+\tl
+4) Квадратичная форма $A(x,x)$ называется знакопеременной, если она принимает как положительные, так и отрицательные значения.
+\tl
+5) Квадратичная форма $A(x,x)$ называется квазизнакоопределённой, если  $A(x,x) \ge 0 (A(x,x) \le 0)$ , но форма не является знакоопределённой.
+\tl
+Для приведения квадратичной формы к каноническому виду используется метод Лагранжа. Данный метод состоит в последовательном выделении в квадратичной форме полных квадратов. Возможны два случая:
+\tl
+1. Пусть $f_{11} \ne 0$. Выделим в $f(x_1,x_2,...x_n)$ все слагаемые, содержащие 
+$f_{11}x_{1}^{2}+f_{12}x_{1}x_{2}+...+f_{1n}x_{1}x_{n}+\dsum{2 \le j \le k \le n}{f_{jk}x_{j}x_{k}}$
+\tl
+В последнем представлении первое слагаемое представляет собой квадрат линейной формы по переменным $x_1,x_2,...x_n$ ; все оставшиеся слагаемые не зависят от $x_1$, т.е. составляют квадратичную форму от переменных $x_2,...x_n$. Таким образом, исходная задача для формы $n$ переменных оказывается сведенной к случаю формы $(n-1)$-й переменной; последняя преобразуется по аналогичному принципу.
+\tl
+2. Если $f_{11}=0$, но $\exists k: f_{kk} \ne 0$ , т.е. при хотя бы одном квадрате переменной коэффициент отличен от нуля. Алгоритм модифицируется таким образом, что выделение полного квадрата начинается с переменной $x_{k}$ вместо $x_{1}$.
+
+
 \section{Матрица квадратичной формы}
 
-\section{Преобразование квадратичной формы при линейном однородном‭ ‬преобразовании переменных}
+%\section{Преобразование квадратичной формы при линейном однородном‭ ‬преобразовании переменных}
 
-\section{Приведение действительной квадратичной формы к нормальному‭ ‬виду}
+%\section{Приведение действительной квадратичной формы к нормальному‭ ‬виду}
 
 \section{Закон инерции квадратичных форм}
 
 \section{Знакоопределенные квадратичные формы}
 
-\section{Список‭ ‬использованной литературы}
+\section{Список использованной литературы}
 
 \end{document}
