[CW] added some chapters

--- a/course_work_number_one/main.tex
+++ b/course_work_number_one/main.tex
@@ -28,7 +28,7 @@
 
 
 \begin{document}
- 
+\input titlepage
 \setcounter{tocdepth}{1}
 
 \tableofcontents
@@ -89,15 +89,94 @@ $f_{11}x_{1}^{2}+f_{12}x_{1}x_{2}+...+f_{1n}x_{1}x_{n}+\dsum{2 \le j \le k \le n
 
 
 \section{Матрица квадратичной формы}
+\tab Матрицей квадратичной формы называется матрица, составленная из ее коэффициентов. Квадратичной форме соответствует единственная симметрическая матрица (Симметрической называют квадратную матрицу, элементы которой симметричны относительно главной диагонали. Более формально, симметричной называют такую матрицу $A$ что $i,j:a_{ij}=a{ji}$.)
+где $a_{ij}=f_{ij}$
+\tl
+И наоборот, всякой симметрической матрице соответствует единственная квадратичная форма с точностью до обозначения переменных.
+\tab
+Рангом квадратичной формы называют ранг ее матрицы. Квадратичная форма $n$ переменных называется невырожденной, если ее матрица невырожденная, т. е. $r = n$, и вырожденной, если $r < n$, где $r=rang(A)$. 
+\tl
+Матрицей называется прямоугольная таблица из чисел, содержащая некоторое количество $m$ строк и некоторое количество $n$ столбцов. Числа $m$ и $n$ называются порядками матрицы. В случае, если $m = n$, матрица называется квадратной, а число $m= n$ – ее порядком.
+\tl
+В дальнейшем для записи матриц будут применяться либо сдвоенные черточки, либо круглые скобки.
+\tl
+Квадратичную форму $n$ переменных $х_1, х_2,...,х_n$ можно записать в матричном виде. Действительно, если $Х$ – матрица-столбец из переменных $(х_1, х_2,...,х_n)$, $XT$ – матрица, полученная транспонированием матрицы $X$, т.е. матрица-строка из тех же переменных, то $f(х_1, х_2,...,х_n)= XTAX$, где $А$ определяется формулой (1.3).
 
-%\section{Преобразование квадратичной формы при линейном однородном‭ ‬преобразовании переменных}
+\section{Преобразование квадратичной формы при линейном однородном преобразовании переменных}
+\tab Рассмотрим квадратичную форму (1.1). Перейдем к новым переменным $y_1, y_2…,y_n$ по формулам 
+$$x_1=b_{11}y_1+b_{12}y_2+...+b_{1n}y_n$$
+$$x_2=b_{21}y_1+b_{22}y_2+...+b_{2n}y_n$$
+$$...$$
+$$x_n=b_{n1}y_1+b_{n2}y_2+...+b_{nn}y_n$$
 
-%\section{Приведение действительной квадратичной формы к нормальному‭ ‬виду}
+или в матричном виде $X=BY$ (1.6), где 
+\tl
+В квадратичной форме (1.1) вместо $(х_1, х_2,...,х_n)$ подставим их выражения через $(y_1, y_2,...,y_n)$ определяемые формулами (1.5), получим квадратичную форму $\phi (y_1, y_2,...,y_n)$ $n$ переменных с некоторой матрицей $С$. В этом случае говорят, что квадратичная форма $f(х_1, х_2,...,х_n)$ переводится в квадратичную форму $\phi(y_1, y_2,...,y_n)$ линейным однородным преобразованием (1.5). Линейное однородное преобразование (1.6) называется невырожденным, если $det B \ne 0$, где $det$ – определитель матрицы $B$.
+\tl
+Две квадратичные формы называются конгруэнтными, если существует невырожденное линейное однородное преобразование, переводящее одну форму в другую. Если $f(х_1, х_2,...,х_n)$ и $\phi(y_1, y_2,...,y_n)$ конгруэнтны, то будем писать $f(х_1, х_2,...,х_n) \sim \phi(y_1, y_2,...,y_n)$. Свойства конгруэнтности квадратичных форм:
+\tl
+1.  $f(х_1, х_2,...,х_n) \sim \phi(y_1, y_2,...,y_n)$.
+\tl
+2. Если $f(х_1, х_2,...,х_n) \sim \phi(y_1, y_2,...,y_n), \phi(y_1, y_2,...,y_n) \sim \psi(z_1,z_2,...,z_n)$, то $f(х_1, х_2,...,х_n) \sim \psi(z_1,z_2,...,z_n)$
+\tl
+Теорема 1. Квадратичная форма $f(х_1, х_2,...,х_n)$ с матрицей $А$ линейным однородным преобразованием $Х = ВУ$ переводится в квадратичную форму $\phi(y_1, y_2,...,y_n)$ с матрицей $С=ВT АВ$.
+\tl
+Следствие 1. Определители матриц конгруэнтных невырожденных действительных квадратичных форм имеют одинаковые знаки.
+\tl
+Следствие 2. Конгруэнтные квадратичные формы имеют одинаковые ранги.
+
+\section{Приведение действительной квадратичной формы к нормальному виду}
+\tab Квадратичная форма $f(x_1,x_2,...,x_n)$ называется канонической, если она не содержит произведений различных переменных, т.е.\newline $f(x_1,x_2,...,x_n)=\udsum{i=1}{r}{a_{ii}x_i^2} (r \le n)$
+\tl
+Каноническая квадратичная форма называется нормальной (или имеет нормальный вид), если $|a_n| = 1 ( i= 1, 2, . . . , r)$, т. е. отличные от нуля коэффициенты при квадратах переменных равны $+1$ или -$1$. 
+
+пример!!!
+\tl
+Теорема 2. Любая квадратичная форма некоторым невырожденным линейным преобразованием может быть приведена к каноническому виду \newline $\phi(y_1,y_2,...,y_n)=b_{11}y_1^2+b_{22}y_2^2+...+b_{nn}y_n^2$ , где $y_1,y_2,...,y_n$ - новые переменные.
+\tl
+Некоторые из коэффициентов $b_{ij}$ могут оказаться равными нулю; число отличных от нуля коэффициентов в этой формуле равно рангу $r$ матрицы квадратичной формы $\phi$. 
+
+Теорема 3. Любую действительную квадратичную форму линейным невырожденным преобразованием можно привести к нормальному виду
+
+$\psi(z_1,z_2,...,z_n)=z_1^2+z_2^2+...+z_{k-1}^2-z_k^2-...-z_r^2$
+Число входящих сюда квадратов равно рангу формы.
+
+пример!
 
 \section{Закон инерции квадратичных форм}
+\tabЗакон инерции квадратичных форм выражает:
+\tl
+Теорема 4. Число положительных и число отрицательных квадратов в нормальном виде, к которому приводится данная действительная квадратичная форма невырожденным действительным линейным преобразованием, не зависит от выбора преобразования.
+\tl
+Число положительных квадратов в нормальной форме, к которой приводится данная действительная квадратичная форма, называют положительным индексом инерции этой формы, число отрицательных квадратов - отрицательным индексом инерции, разность между положительным и отрицательным индексами инерции - сигнатурой формы $f$. Если известен ранг формы, то задание любого из трех указанных выше чисел определяет два других.
+\tl
+Теорема 5. Две действительные квадратичные формы от $n$ переменных тогда и только тогда конгруэнтны, когда они имеют одинаковые ранги и одинаковые сигнатуры.
+матрица квадратичный переменный
+
 
 \section{Знакоопределенные квадратичные формы}
+\tab Действительная квадратичная форма $f(x_1,x_2…,x_n)$ называется положительно-определенной, если она приводится к нормальному виду, состоящему из $n$ положительных квадратов: $f(x_1,x_2…,x_n) \sim \phi(y_1,y_2….y_n)$, где \newline
+$\psi(z_1,z_2,...,z_n)=z_1^2+z_2^2+...+z_{k-1}^2-z_k^2-...-z_r^2$ т.е. если ранг и положительный индекс инерции равны числу неизвестных.
+\tl
+Систему значений $x_1,x_2…,x_n$ назовем нулевой, если $x_1 = х_2 = ... = x_n = 0$, и ненулевой, если хотя бы одно из них отлично от нуля.
+\tl
+Теорема 6. Действительная квадратичная форма $f(x_1,x_2…,x_n)$ является положительно-определенной тогда и только тогда, когда она принимает положительные значения при любой ненулевой системе значений переменных $x_1,x_2…,x_n$. Пусть дана квадратичная форма $f(x_1,x_2…,x_n)$ с матрицей $A = (ay)$. Главными минорами квадратичной формы $f$ называются миноры  
+\tl
+т.е. миноры порядка $1, 2, ... , n$ матрицы $А$, расположенные в левом верхнем углу; последний из них совпадает с определителем матрицы.
+\tl
+Теорема 7. Квадратичная форма $f(x_1,x_2…,x_n)$ с действительной матрицей является положительно-определенной тогда и только тогда, когда все ее главные миноры положительны.
+\tl
+Действительная квадратичная форма называется отрицательно-определенной, если она является невырожденной и приводится к нормальному виду, содержащему только отрицательные квадраты всех переменных; эту форму можно привести к виду:
+$\phi(y_1,y_2….y_n)= -y_{1}^2-y_{2}^2 -…- y_{n}^2$
+\tl
+Теорема 8. Квадратичная форма является отрицательно-определенной тогда и только тогда, когда ее главные миноры четного порядка положительны, а нечетного - отрицательны.
+\tl
+Положительно-определенные и отрицательно-определенные квадратичные формы называются знакоопределенными квадратичными формами.
+\tl
+Вырожденные квадратичные формы, нормальный вид которых состоит из квадратов одного знака, называются полуопределенными. Неопределенными называются квадратичные формы, нормальный вид которых содержит как положительные, так и отрицательные квадраты переменных.
 
 \section{Список использованной литературы}
 
+8) В.А. Ильин, Э.Г. Позняк. Линейная алгебра. М.: Наука, 1999
+\\\LaTeX
 \end{document}
