[CW] added example1

--- a/course_work_number_one/main.tex
+++ b/course_work_number_one/main.tex
@@ -225,6 +225,51 @@ $\phi(y_1,y_2….y_n)= -y_{1}^2-y_{2}^2 -…- y_{n}^2$
 \tl
 Вырожденные квадратичные формы, нормальный вид которых состоит из квадратов одного знака, называются полуопределенными. Неопределенными называются квадратичные формы, нормальный вид которых содержит как положительные, так и отрицательные квадраты переменных.
 
+\section{Примеры использования}
+\tab Пример 1. Найти второй дифференциал сложной функции $z(y)=f(x(y))$, где $x(y)=Sy$, в окрестности некоторого фиксированного значения векторного аргумента $y0$, если известны матрица Гессе, вычисленная при $x=x0=Sy0$, и матрица $S$
+линейной замены переменных:
+$$\frac{d^2f(x_0)}{dx^Tdx}
+=\begin{pmatrix}
+1&1\\
+1&1
+\end{pmatrix}\!,\quad 
+S=
+\begin{pmatrix}
+1&2\\
+1&3
+\end{pmatrix}\!.$$
+Решение. Второй дифференциал скалярной функции $f(x)$
+$$d^2f(x)=\sum_{i=1}^{n}\sum_{j=1}^{n}\frac{\partial^2f(x)}{\partial x_i\,\partial x_j}\,dx_i\,dx_j= dx^T\,\frac{d^2f(x)}{dx^Tdx}\,dx$$
+является квадратичной формой дифференциалов $dx_1,…,dx_n$
+независимых переменных, причем матрица Гессе является матрицей этой квадратичной формы. При линейной замене переменных матрица Гессе функции $z(y)$ преобразуется по закону $A'=S^T\cdot A\cdot S$, т.е.
+$$\frac{d^2z(y_0)}{dy^Tdy}= S^T\frac{d^2f(x_0)}{dx^Tdx}\,S= \begin{pmatrix}
+1&1\\
+2&3
+\end{pmatrix}\!\cdot\! 
+\begin{pmatrix}
+1&1\\
+1&1
+\end{pmatrix}\!\cdot\! 
+\begin{pmatrix} 
+1&2\\
+1&3
+\end{pmatrix} = 
+\begin{pmatrix} 
+4&10\\
+10&25
+\end{pmatrix}\!.$$
+
+Следовательно, искомый дифференциал имеет вид
+$$d^2z=
+\begin{pmatrix}
+dy_1&dy_2
+\end{pmatrix}\!\cdot\! 
+\begin{pmatrix}
+4&10\\
+10&25 
+\end{pmatrix}\!\cdot\! 
+\begin{pmatrix}dy_1\\dy_2\end{pmatrix}= 4dy_1^2+20dy_1dy_2+25dy_2^2.$$
+
 \section{Список использованной литературы}
 
 8) В.А. Ильин, Э.Г. Позняк. Линейная алгебра. М.: Наука, 1999
