[CW] some changes

--- a/course_work_number_one/main.tex
+++ b/course_work_number_one/main.tex
@@ -45,7 +45,7 @@
 \tl
 Если переменные квадратичной формы обозначить $x_1,...,x_n$, то общий вид квадратичной формы от этих переменных:
 \\
-$f(x_1,...x_n)=\dsum{1 \le j \le k \le n}{f_{jk}x_jx_k} = \udsum{j=1}{n}{}\udsum{k=1}{n}{a_{jk}x_{j}x{k}}$
+$$f(x_1,...x_n)=\dsum{1 \le j \le k \le n}{f_{jk}x_jx_k} = \udsum{j=1}{n}{}\udsum{k=1}{n}{a_{jk}x_{j}x{k}}\eqno(1.1)$$
 \\ \tab где $a_{jk} = f_{jk}$ некоторые числа, называемые коэффициентами.
 \\
 Не ограничивая общности, можно считать, что $a_{jk} = a_{kj}$. Квадратичная форма называется действительной или комплексной в зависимости от того, являются ли ее коэффициенты соответственно действительными или комплексными числами. Будем рассматривать действительные квадратичные формы.
@@ -67,7 +67,7 @@ $f(x_1,...x_n)=\dsum{1 \le j \le k \le n}{f_{jk}x_jx_k} = \udsum{j=1}{n}{}\udsum
 \tl
 (Рангом матрицы $A$ с $m$ строк и $n$ столбцов называется максимальное число линейно независимых строк (столбцов). Несколько строк (столбцов) называются линейно независимыми, если ни одна из них не выражается линейно через другие. Ранг $rangM$ матрицы $M$ размера $m \times n$ называют полным, если $rangM = min(m,n)$.)
 \tl
-3) Квадратичная форма A(x,x) называется положительно (отрицательно) определённой, если для любого $x \ne 0 A(x,x) > 0 (A(x,x) < 0)$. Положительно определённые и отрицательно определённые формы называются знако-определёнными. 
+3) Квадратичная форма A(x,x) называется положительно (отрицательно) определённой, если для любого $x \ne 0$ $A(x,x)> 0$ $(A(x,x)<0)$. Положительно определённые и отрицательно определённые формы называются знако-определёнными. 
 \tl
 Квадратичная форма является положительно определенной, тогда и только тогда, когда все угловые миноры её матрицы строго положительны.
 \tl
@@ -91,35 +91,36 @@ $f_{11}x_{1}^{2}+f_{12}x_{1}x_{2}+...+f_{1n}x_{1}x_{n}+\dsum{2 \le j \le k \le n
 
 
 \section{Матрица квадратичной формы}
-\tab Матрицей квадратичной формы называется матрица, составленная из ее коэффициентов. Квадратичной форме соответствует единственная симметрическая матрица (Симметрической называют квадратную матрицу, элементы которой симметричны относительно главной диагонали. Более формально, симметричной называют такую матрицу $A$ что $\forall i,j:a_{ij}=a{ji}$.)
+\tab Матрицей квадратичной формы называется матрица, составленная из ее коэффициентов. Квадратичной форме соответствует единственная симметрическая матрица (Симметрической называют квадратную матрицу, элементы которой симметричны относительно главной диагонали. Более формально, симметричной называют такую матрицу $A$ что $\forall i,j:a_{ij}=a_{ji}$.)
 
 $$A = \begin{pmatrix}
 a_{11} & a_{12} & \cdots & a_{1n} \\
 a_{21} & a_{22} & \cdots & a_{2n} \\        
 \vdots & \vdots & \ddots & \vdots \\
 a_{n1} & a_{n2} & \cdots & a_{nn}
-\end{pmatrix}$$
+\end{pmatrix}\eqno(1.2)$$
 
 где $a_{ij}=f_{ij}$
 \tl
 И наоборот, всякой симметрической матрице соответствует единственная квадратичная форма с точностью до обозначения переменных.
-\tab
+\tl
 Рангом квадратичной формы называют ранг ее матрицы. Квадратичная форма $n$ переменных называется невырожденной, если ее матрица невырожденная, т. е. $r = n$, и вырожденной, если $r < n$, где $r=rang(A)$. 
 \tl
 Матрицей называется прямоугольная таблица из чисел, содержащая некоторое количество $m$ строк и некоторое количество $n$ столбцов. Числа $m$ и $n$ называются порядками матрицы. В случае, если $m = n$, матрица называется квадратной, а число $m= n$ – ее порядком.
 \tl
 В дальнейшем для записи матриц будут применяться либо сдвоенные черточки, либо круглые скобки.
 \tl
-Квадратичную форму $n$ переменных $х_1, х_2,...,х_n$ можно записать в матричном виде. Действительно, если $Х$ – матрица-столбец из переменных $(х_1, х_2,...,х_n)$, $XT$ – матрица, полученная транспонированием матрицы $X$, т.е. матрица-строка из тех же переменных, то $f(х_1, х_2,...,х_n)= XTAX$, где $А$ определяется формулой (1.3).
+Квадратичную форму $n$ переменных $x_1, x_2,...,x_n$ можно записать в матричном виде. Действительно, если $Х$ – матрица-столбец из переменных $(x_1, x_2,...,x_n)$, $x^{T}$ – матрица, полученная транспонированием матрицы $X$, т.е. матрица-строка из тех же переменных, то $f(x_1, x_2,...,x_n)= X^{T}AX$, где $A$ - это исходная матрица квадратичной формы.
 
 \section{Преобразование квадратичной формы при линейном однородном преобразовании переменных}
-\tab Рассмотрим квадратичную форму (1.1). Перейдем к новым переменным $y_1, y_2…,y_n$ по формулам 
+\tab Рассмотрим квадратичную форму (1.1). Перейдем к новым переменным $y_1, y_2…,y_n$ по формулам (1.3):
 $$x_1=b_{11}y_1+b_{12}y_2+...+b_{1n}y_n$$
 $$x_2=b_{21}y_1+b_{22}y_2+...+b_{2n}y_n$$
 $$...$$
 $$x_n=b_{n1}y_1+b_{n2}y_2+...+b_{nn}y_n$$
 
-или в матричном виде $X=BY$ (1.6), где  \newline
+или в матричном виде $X=BY$ (1.4), где  \newline
+\begin{center}
 $X = \begin{pmatrix}
 x_{1}  \\
 x_{2} \\        
@@ -138,27 +139,26 @@ y_{2} \\
 \vdots \\
 y_{n}
 \end{pmatrix}$
+\end{center}
+\tab
+В квадратичной форме (1.1) вместо $(x_1, x_2,...,x_n)$ подставим их выражения через $(y_1, y_2,...,y_n)$ определяемые формулами (1.3), получим квадратичную форму $\phi (y_1, y_2,...,y_n)$ $n$ переменных с некоторой матрицей $С$. В этом случае говорят, что квадратичная форма $f(x_1, x_2,...,x_n)$ переводится в квадратичную форму $\phi(y_1, y_2,...,y_n)$ линейным однородным преобразованием (1.3). Линейное однородное преобразование (1.4) называется невырожденным, если $det B \ne 0$, где $det$ – определитель матрицы $B$.
 \tl
-В квадратичной форме (1.1) вместо $(х_1, х_2,...,х_n)$ подставим их выражения через $(y_1, y_2,...,y_n)$ определяемые формулами (1.5), получим квадратичную форму $\phi (y_1, y_2,...,y_n)$ $n$ переменных с некоторой матрицей $С$. В этом случае говорят, что квадратичная форма $f(х_1, х_2,...,х_n)$ переводится в квадратичную форму $\phi(y_1, y_2,...,y_n)$ линейным однородным преобразованием (1.5). Линейное однородное преобразование (1.6) называется невырожденным, если $det B \ne 0$, где $det$ – определитель матрицы $B$.
+Две квадратичные формы называются конгруэнтными, если существует невырожденное линейное однородное преобразование, переводящее одну форму в другую. Если $f(x_1, x_2,...,x_n)$ и $\phi(y_1, y_2,...,y_n)$ конгруэнтны, то будем писать $f(x_1, x_2,...,x_n) \sim \phi(y_1, y_2,...,y_n)$. Свойства конгруэнтности квадратичных форм:
 \tl
-Две квадратичные формы называются конгруэнтными, если существует невырожденное линейное однородное преобразование, переводящее одну форму в другую. Если $f(х_1, х_2,...,х_n)$ и $\phi(y_1, y_2,...,y_n)$ конгруэнтны, то будем писать $f(х_1, х_2,...,х_n) \sim \phi(y_1, y_2,...,y_n)$. Свойства конгруэнтности квадратичных форм:
+1.  $f(x_1, x_2,...,x_n) \sim \phi(y_1, y_2,...,y_n)$.
 \tl
-1.  $f(х_1, х_2,...,х_n) \sim \phi(y_1, y_2,...,y_n)$.
+2. Если $f(x_1, x_2,...,x_n) \sim \phi(y_1, y_2,...,y_n), \phi(y_1, y_2,...,y_n) \sim \psi(z_1,z_2,...,z_n)$, то $f(x_1, x_2,...,x_n) \sim \psi(z_1,z_2,...,z_n)$
 \tl
-2. Если $f(х_1, х_2,...,х_n) \sim \phi(y_1, y_2,...,y_n), \phi(y_1, y_2,...,y_n) \sim \psi(z_1,z_2,...,z_n)$, то $f(х_1, х_2,...,х_n) \sim \psi(z_1,z_2,...,z_n)$
-\tl
-Теорема 1. Квадратичная форма $f(х_1, х_2,...,х_n)$ с матрицей $А$ линейным однородным преобразованием $Х = ВУ$ переводится в квадратичную форму $\phi(y_1, y_2,...,y_n)$ с матрицей $С=ВT АВ$.
+Теорема 1. Квадратичная форма $f(x_1, x_2,...,x_n)$ с матрицей $А$ линейным однородным преобразованием $Х = ВУ$ переводится в квадратичную форму $\phi(y_1, y_2,...,y_n)$ с матрицей $C=B^{T}AB$.
 \tl
 Следствие 1. Определители матриц конгруэнтных невырожденных действительных квадратичных форм имеют одинаковые знаки.
 \tl
 Следствие 2. Конгруэнтные квадратичные формы имеют одинаковые ранги.
 
 \section{Приведение действительной квадратичной формы к нормальному виду}
-\tab Квадратичная форма $f(x_1,x_2,...,x_n)$ называется канонической, если она не содержит произведений различных переменных, т.е.\newline $f(x_1,x_2,...,x_n)=\udsum{i=1}{r}{a_{ii}x_i^2} (r \le n)$
+\tab Квадратичная форма $f(x_1,x_2,...,x_n)$ называется канонической, если она не содержит произведений различных переменных, т.е. $$f(x_1,x_2,...,x_n)=\udsum{i=1}{r}{a_{ii}x_i^2} (r \le n)$$
 \tl
 Каноническая квадратичная форма называется нормальной (или имеет нормальный вид), если $|a_n| = 1 ( i= 1, 2, . . . , r)$, т. е. отличные от нуля коэффициенты при квадратах переменных равны $+1$ или -$1$. 
-
-пример!!!
 \tl
 Теорема 2. Любая квадратичная форма некоторым невырожденным линейным преобразованием может быть приведена к каноническому виду \newline $\phi(y_1,y_2,...,y_n)=b_{11}y_1^2+b_{22}y_2^2+...+b_{nn}y_n^2$ , где $y_1,y_2,...,y_n$ - новые переменные.
 \tl
@@ -168,8 +168,6 @@ y_{n}
 
 $\psi(z_1,z_2,...,z_n)=z_1^2+z_2^2+...+z_{k-1}^2-z_k^2-...-z_r^2$
 Число входящих сюда квадратов равно рангу формы.
-
-пример!
 
 \section{Закон инерции квадратичных форм}
 \tabЗакон инерции квадратичных форм выражает:
@@ -184,11 +182,12 @@ $\psi(z_1,z_2,...,z_n)=z_1^2+z_2^2+...+z_{k-1}^2-z_k^2-...-z_r^2$
 
 \section{Знакоопределенные квадратичные формы}
 \tab Действительная квадратичная форма $f(x_1,x_2…,x_n)$ называется положительно-определенной, если она приводится к нормальному виду, состоящему из $n$ положительных квадратов: $f(x_1,x_2…,x_n) \sim \phi(y_1,y_2….y_n)$, где \newline
-$\psi(z_1,z_2,...,z_n)=z_1^2+z_2^2+...+z_{k-1}^2-z_k^2-...-z_r^2$ т.е. если ранг и положительный индекс инерции равны числу неизвестных.
+$$\phi(y_1,y_2, … ,y_n)=y_1^2+y_2^2+…+y_n^2$$ т.е. если ранг и положительный индекс инерции равны числу неизвестных.
 \tl
 Систему значений $x_1,x_2…,x_n$ назовем нулевой, если $x_1 = х_2 = ... = x_n = 0$, и ненулевой, если хотя бы одно из них отлично от нуля.
 \tl
-Теорема 6. Действительная квадратичная форма $f(x_1,x_2…,x_n)$ является положительно-определенной тогда и только тогда, когда она принимает положительные значения при любой ненулевой системе значений переменных $x_1,x_2…,x_n$. Пусть дана квадратичная форма $f(x_1,x_2…,x_n)$ с матрицей $A = (ay)$. Главными минорами квадратичной формы $f$ называются миноры  
+Теорема 6. Действительная квадратичная форма $f(x_1,x_2…,x_n)$ является положительно-определенной тогда и только тогда, когда она принимает положительные значения при любой ненулевой системе значений переменных $x_1,x_2…,x_n$.
+\tl Пусть дана квадратичная форма $f(x_1,x_2…,x_n)$ с матрицей $A = (ay)$. Главными минорами квадратичной формы $f$ называются миноры  
 $$a_{11}, 
 \begin{vmatrix}
 a_{11} & a_{12} \\ 
@@ -270,8 +269,13 @@ dy_1&dy_2
 \end{pmatrix}\!\cdot\! 
 \begin{pmatrix}dy_1\\dy_2\end{pmatrix}= 4dy_1^2+20dy_1dy_2+25dy_2^2.$$
 
-\section{Список использованной литературы}
 
+
+\bibliographystyle{utf8gost705u}  %% стилевой файл для оформления по ГОСТу
+\bibliography{biblio}     %% имя библиографической базы (bib-файла) 
+
+1)http://mathhelpplanet.com/static.php?p=linyeinye-i-kvadratichnye-formy
+2)Eva Bayer-Fluckiger, David Lewis, Andrew Ranicki. Quadratic Forms and Their Applications
 8) В.А. Ильин, Э.Г. Позняк. Линейная алгебра. М.: Наука, 1999
 \\\LaTeX
 \end{document}
