--- a/course_work_number_one/titlepage.tex
+++ b/course_work_number_one/titlepage.tex
@@ -15,43 +15,22 @@
 \toRight{Кафедра дифференциальных уравнений и прикладной математики}
 
 \begin{center}
-\large ОТЧЕТ ПО ОЗНАКОМИТЕЛЬНОЙ ПРАКТИКЕ
+\large КУРСОВАЯ РАБОТА
 \medskip
 
-студента 2 курса механико-математического факультета
+\toLeft{студента \underline{ 2 } курса \underline{213} группы \newline направления \underline{01.03.02 Прикладная математика и информатика}}
 
-очной формы обучения,
+\toCenter{Механико-математический факультет
 
-проходящего обучение по направлению 01.03.02 
+Шарова Александра Вадимовича}
 
-<<Прикладная математика и информатика» \\
-Шарова Александра Вадимовича
+
+
 \medskip
 \end{center}
-Тема: \underline{ОСНОВЫ РАБОТЫ В СИСТЕМЕ \LaTeX\ }
+
 \medskip
-\toLeft{
 
-Место прохождения:
-
-\underline{кафедра дифференциальных уравнений и прикладной  математики}
-\bigskip
-
-сроки практики: с \underline{01.07.2015} по \underline{14.07.2015}
-\vspace{2cm}
-
-Оценка \line(1,0){100}
-Руководитель практики
-к.ф.-м.н., доцент \hspace{2.6cm} \line(1,0){100} \hspace{1.5cm} В. А. Халова
-\hspace{6.8cm}подпись, дата
-\bigskip
-Зав. кафедрой
-
-д.ф.-м.н., профессор \hspace{1.8cm} \line(1,0){100} \hspace{1.5cm} А. П. Хромов
-
-\hspace{6.8cm}подпись, дата
-}
-\vfill
 \vfill%заполнитель страницы
 \toCenter{Саратов, 2016}
 \clearpage 
