[CW] change style

--- a/course_work_number_one/main.tex
+++ b/course_work_number_one/main.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper,14pt]{report}
+\documentclass[bachelor, och, coursework, times]{SCWorks}
 
 \usepackage[utf8]{inputenc}
 \usepackage[T2A]{fontenc}
@@ -6,7 +6,7 @@
 
 \usepackage{amsmath}
 \usepackage{dsfont} % it needs for Math-special words as A
-\usepackage{color} % I use it for color links
+\usepackage{color}
 \usepackage{hyperref}
 
 
@@ -23,19 +23,58 @@
 \newcommand{\tl}{\newline\tab}
 
 
-\renewcommand{\thesection}{\arabic{section}}
-\renewcommand{\thesubsection}{\arabic{section}}
+%\renewcommand{\thesection}{\arabic{section}}
+%\renewcommand{\thesubsection}{\arabic{section}}
 
 \author{Sharov Alex}
 
 
 \begin{document}
-\input titlepage
+%\input titlepage
+
+\chair{дифференциальных уравнений и прикладной математики}
+
+\worktitle{Квадратичные формы и их приложения}
+
+\course{2}
+
+\department{Механико-математического факультета}
+
+\group{213}
+
+\napravlenie{01.03.02 Прикладная математика и информатика}
+
+
+\studentName{Шарова Александра Вадимовича}
+
+\chtitle{} 
+\chname{}  
+
+\satitle{} 
+\saname{}  
+
+\patitle{} 
+\paname{}  
+
+\term{} 
+
+\duration{} 
+
+\practStart{}  
+\practFinish{} 
+
+\year{2016}  
+\MakeTitle
+
+
+
+
 \setcounter{tocdepth}{1}
 
 \tableofcontents
 
-\section{Введение}
+\intro
+lol, тут будет введение
 
 \section{Квадратичная форма и ее свойства}
 
@@ -271,7 +310,7 @@ dy_1&dy_2
 
 
 
-\bibliographystyle{utf8gost705u}  %% стилевой файл для оформления по ГОСТу
+%bibliographystyle{gost780uv}  %% стилевой файл для оформления по ГОСТу
 \bibliography{biblio}     %% имя библиографической базы (bib-файла) 
 
 1)http://mathhelpplanet.com/static.php?p=linyeinye-i-kvadratichnye-formy
