[CW] alpha version. I must send it my teacher

--- a/course_work_number_one/main.tex
+++ b/course_work_number_one/main.tex
@@ -6,7 +6,7 @@
 
 \usepackage{amsmath}
 \usepackage{dsfont} % it needs for Math-special words as A
-\usepackage{color}
+\usepackage{color} % I use it for color links
 \usepackage{hyperref}
 
 
@@ -308,13 +308,19 @@ dy_1&dy_2
 \end{pmatrix}\!\cdot\! 
 \begin{pmatrix}dy_1\\dy_2\end{pmatrix}= 4dy_1^2+20dy_1dy_2+25dy_2^2.$$
 
+\begin{thebibliography}{00} % Список литературы
+\bibitem{1}
+http://mathhelpplanet.com/static.php?p=linyeinye-i-kvadratichnye-formy
+\bibitem{2}
+Eva Bayer-Fluckiger David Lewis, Andrew Ranicki. Quadratic Forms and Their Applications
+\bibitem{3}
+В.А. Ильин, Э.Г. Позняк. Линейная алгебра. М.: Наука, 1999
+\bibitem{4}
+Гусак А.А., Гусак Г.М., Бричикова Е.А. Справочник по высшей математике. Мн.: ТетраСистемс, 1999. - 640с. 
+\bibitem{5}
+Крамер Г. Математические методы статистики. – М.: Регулярная и хаотическая динамика, 2003. 
+\bibitem{6}
+Виноградов И.М. Элементы высшей математики. (Аналитическая геометрия. Дифференциальное исчисление. Основы теории чисел). Учебник для вузов. – М.: Высш. шк., 1999.
+\end{thebibliography}
 
-
-%bibliographystyle{gost780uv}  %% стилевой файл для оформления по ГОСТу
-\bibliography{biblio}     %% имя библиографической базы (bib-файла) 
-
-1)http://mathhelpplanet.com/static.php?p=linyeinye-i-kvadratichnye-formy
-2)Eva Bayer-Fluckiger, David Lewis, Andrew Ranicki. Quadratic Forms and Their Applications
-8) В.А. Ильин, Э.Г. Позняк. Линейная алгебра. М.: Наука, 1999
-\\\LaTeX
 \end{document}
