[CW] added into

--- a/course_work_number_one/main.tex
+++ b/course_work_number_one/main.tex
@@ -74,7 +74,13 @@
 \tableofcontents
 
 \intro
-lol, тут будет введение
+Данная курсовая работа освещает некоторые вопросы теории квадратичных форм.
+
+Квадратичные формы являются очень важной вещью в приложениях и активно используются в современной физике, математике и computer science.
+
+Открыты квадратичные формы были во время рассмотрения кривых второго порядка Лагранжем, а после расширенны многими другими математиками, в том числе Гаусс внёс огромный вклад в развитие данной теории. 
+
+Целью работы является рассмотрения понятия квадратичных форм, связанных с этим определёний, а так же изучениям свойств. 
 
 \section{Квадратичная форма и ее свойства}
 
